<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sweater_square"
                android:layout_weight=".5"
                android:layout_gravity="center"
                android:scaleType="fitXY" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sweater_blurb"
            android:id="@+id/textView22"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight=".05" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".45">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sweater_btn"
                android:id="@+id/sweater_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sweater_res_button"
                    android:layout_weight=".5" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sweater_res_blurb"
                android:id="@+id/textView23"
                android:layout_gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>