<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.anderson.david.resumeapp.MainActivity"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg_2"
        android:src="@drawable/bg3"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg_2_2"
        android:src="@drawable/bg32"
        android:scaleType="fitXY" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/main_root_ll">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:layout_weight=".25"
            android:src="@drawable/hire_david" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".75">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:id="@+id/imageView2"
                            android:src="@drawable/david1"
                            android:layout_weight=".4" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".6">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:id="@+id/imageView3"
                                android:src="@drawable/bio"
                                android:layout_gravity="center_horizontal"
                                android:scaleType="fitXY"
                                android:layout_weight=".4" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:text="@string/main_bio_blurb"
                                android:id="@+id/textView"
                                android:textAlignment="textStart"
                                android:layout_weight=".6" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="40dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:id="@+id/imageView4"
                            android:src="@drawable/math"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".4"
                            android:scaleType="fitXY"
                            android:layout_marginBottom="15dp" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:weightSum="1"
                            android:layout_weight=".6">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_math_blurb_top"
                                android:id="@+id/textView19"
                                android:layout_marginBottom="10dp"
                                android:layout_gravity="center_horizontal"
                                android:textAlignment="center" />

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="1"
                                android:id="@+id/math_squares_layout">

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight=".10"></LinearLayout>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight=".35"
                                    android:weightSum="1"
                                    android:id="@+id/function_layout">

                                    <LinearLayout
                                        android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".2"
                                        android:weightSum="1">

                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:id="@+id/main_x_z_image"
                                            android:scaleType="fitXY"
                                            android:layout_weight=".45" />

                                        <LinearLayout
                                            android:orientation="horizontal"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_weight=".10"></LinearLayout>

                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:id="@+id/main_y_z_image"
                                            android:scaleType="fitXY"
                                            android:layout_weight=".45" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".1"></LinearLayout>

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:id="@+id/main_x_y_image"
                                        android:layout_weight=".7"
                                        android:scaleType="fitXY" />
                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight=".10"></LinearLayout>

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/main_sweater_square"
                                    android:layout_weight=".35" />

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight=".10"></LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/main_math_blurb_left"
                                    android:id="@+id/textView20"
                                    android:layout_weight=".4"
                                    android:layout_marginRight="10dp" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/main_math_blurb_right"
                                    android:id="@+id/textView21"
                                    android:layout_weight=".4" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_math_blurb_bottom"
                                android:id="@+id/textView2"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="40dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:id="@+id/imageView5"
                                android:src="@drawable/technology"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight=".4"
                                android:scaleType="fitXY" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:text="@string/main_tech_blurb"
                                android:id="@+id/textView3"
                                android:layout_gravity="center_horizontal"
                                android:textAlignment="textStart"
                                android:layout_weight=".6"
                                android:paddingBottom="10dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
